# python-e-exploracao-de-dados

./: .gitignore  README.md  main.py  pyproject.toml
cap01/: ex1_1.ipynb  ex1_2.ipynb  ex1_3.ipynb  ex1_4.ipynb  ex1_5.py  ex1_6.py  ex1_7.py
