[project]
name = "python-e-exploracao-de-dados"
version = "0.1.0"
description = "Exercícios e exemplos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
